# Workmate

./: README.md  main.py  model.py  operations.py  pyproject.toml  req.txt
src/: model.py  operations.py
tests/: test_operations.py
